[tool.poetry]
name = "rtui2"
version = "0.1.0"
description = "A TUI tool for ROS 2 Topic/Node debugging"
authors = ["Daisuke Sato <daisuke.sato@whill.inc>"]
repository = "https://github.com/whill-labs/rtui2"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
rtui2 = "rtui2.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
textual = "^0.40"
typing-extensions = "^4.3.0"
netifaces = "^0.11.0"
numpy = "^1.23.0"
PyYAML = "^6.0.1"
argcomplete = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = { version = "^6", python = "^3.10" }
flake8-pyproject = "^1"
isort = "^5"
mypy = "^1"
taskipy = "^1"

[tool.taskipy.tasks]
check_all = "task check && task check_type"
check = "task check_lint && task check_format"
check_lint = "flake8 rtui2"
check_format = "black . --check && isort . --check --diff"
check_type = "mypy rtui2"
format = "black . && isort ."
test = "python -m unittest tests -v"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".git,.venv,__pycache__,tests/__init__.py"
ignore = "E501,W503"
max_complexity = 15

[tool.mypy]
mypy_path = "typings"
show_error_codes = true
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
